--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ body {
     margin-bottom: 0.1em;
     font-size: 2em;
     color: #ffffff;
+    font-style: italic;
 }
 
 .masthead-heading {
@@ -51,6 +52,7 @@ body {
 }
 
 section > h1 {
+  font-weight: 500;
     margin-top: 2em;
 }
 
